Add electricity end-use option result fields. Fix unit extraction. Use unittest.TestCase for unit tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ ignore = [
     "S101", # flake8-bandit assert
     "S308", # flake8-bandit suspicious-mark-safe-usage
     "E501", # pycodestyle line-too-long
+    "PTH100" # objectively wrong replacement suggested
 ]
 line-length = 140
 select = [
